# xreplacer

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  readme.md
conf/: xrep_conf.json  xrep_conf.xml
core/src/: core.cpp
doc/: documentation.html
doc/html/: annotated.html  base_8hpp_source.html  base__exception_8hpp_source.html  classConfigCreator-members.html  classConfigCreator.html  classSTDOUT__Capturer-members.html  classSTDOUT__Capturer.html  classes.html  classtests_1_1ConfigCreator-members.html  classtests_1_1ConfigCreator.html  classtests_1_1ConfiguratorTester.html  classtests_1_1ConfiguratorTester__coll__graph.map  classtests_1_1ConfiguratorTester__inherit__graph.md5  classtests_1_1LoggerTester.html  classtests_1_1LoggerTester__coll__graph.map  classtests_1_1LoggerTester__inherit__graph.md5  classtests_1_1ParserTester.html  classtests_1_1ParserTester__coll__graph.map  classtests_1_1ParserTester__coll__graph.md5  classtests_1_1ReplacerTester.html  classtests_1_1ReplacerTester__coll__graph.map  classtests_1_1ReplacerTester__inherit__graph.md5  classtests_1_1STDOUT__Capturer-members.html  classtests_1_1STDOUT__Capturer.html  classxrep_1_1FileDataReplacer-members.html  classxrep_1_1FileDataReplacer.html  classxrep_1_1FileDataReplacer__coll__graph.md5  classxrep_1_1FileDataReplacer__inherit__graph.map  classxrep_1_1FileSystemParser-members.html  classxrep_1_1FileSystemParser.html  classxrep_1_1FileSystemParser__coll__graph.map  classxrep_1_1FileSystemParser__inherit__graph.md5  classxrep_1_1JsonConfigurator-members.html  classxrep_1_1JsonConfigurator.html  classxrep_1_1JsonConfigurator__coll__graph.map  classxrep_1_1JsonConfigurator__inherit__graph.md5  classxrep_1_1Logger-members.html  classxrep_1_1Logger.html  classxrep_1_1LoggerHelper-members.html  classxrep_1_1LoggerHelper.html  (+134 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+4 more)
doxyfiles/: mainpage_data.dox
include/: cmake_variables.hpp  cmake_variables.hpp.in  configurator.hpp  core.hpp  exception.hpp  factory.hpp  functions.hpp  informer.hpp  interface.hpp  logger.hpp  parser.hpp  parser_fs.hpp  parser_notificator.hpp  replace_notificator.hpp  replacer.hpp
include/exception/: base_exception.hpp  configurator_exceptions.hpp  parser_exceptions.hpp  replacer_exceptions.hpp
include/interface/: base.hpp  base_interface.hpp  iconfigurator.hpp  ilogger.hpp  interface.hpp  iparser.hpp  ireplacer.hpp
interface/: ireplacer.hpp
modules/configurator/src/: configurator.cpp
modules/logger/: module_info.cmake
modules/logger/include/: logger.hpp
modules/logger/src/: logger.cpp
modules/parser/include/: parser.hpp
modules/replacer/src/: replacer.cpp
modules/reseller/: reseller.tpp
old/include/: configurator.hpp  exception.hpp  functions.hpp  parser.hpp  parser_notificator.hpp  replace_notificator.hpp  replacer.hpp
old/src/: configurator.cpp  exception.cpp  functions.cpp  parser_notificator.cpp  replace_notificator.cpp
old/tests/include/: test_runner.h
old/tests/src/: tests.cpp
src/: configurator.cpp  core.cpp  exception.cpp  functions.cpp  informer.cpp  logger.cpp  parser.cpp  parser_fs.cpp  parser_notificator.cpp  replace_notificator.cpp  replacer.cpp
tests/: configrator.cpp  configurator.cpp  logger.cpp  parser.cpp  replacer.cpp
tests/include/: test_runner.h  tests.hpp  tests_functions.hpp
tests/src/: tests.cpp  tests_functions.cpp
tests/testing_functions/: config_creator.hpp  functions.hpp  stdout_capturer.hpp
